--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1 style="color:gray; font-size:40px;">Curriculum Vitae</h1>
 
-    <img src="./Cristiano-Ronaldo-PNG-Clipart.png" width="200px" alt="Foto de Cristiano Ronaldo">
+    <img src="./assets/img/Cristiano-Ronaldo-PNG-Clipart.png" width="200px" alt="Foto de Cristiano Ronaldo">
 
 
     <h2>Cristino Ronaldo</h2>
@@ -61,7 +61,7 @@
     </p>
 
     <p>Visita mi
-        <a href="./portafolio.html">portafolio</a>
+        <a href="./assets/portafolio.html">portafolio</a>
     </p>
 </body>
 
