--- a/assets/portafolio.html
+++ b/assets/portafolio.html
@@ -10,7 +10,7 @@
         <table>
             <tr>
                 <td>Curruculum</td>
-                <th><img src="./proyecto-uno.png" width="200px" alt="Imagen de primer proyecto"></th>
+                <th><img src="./img/proyecto-uno.png" width="200px" alt="Imagen de primer proyecto"></th>
             </tr>
             <tr>
                 <td>Proyecto 2</td>
@@ -21,7 +21,7 @@
         </table>
         
     <P>volver al
-        <a href="./index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
     </P>
 </body>
 </html>
